# DataTransfer

./: CMakeLists.txt  README.md  daemon.vbs  guard.bat  protect.sh  start.sh
apps/: CMakeLists.txt
apps/DataTransfer/: CMakeLists.txt  Transfer.aps  Transfer.rc  baseset.cpp  baseset.h  broadcastwnd.cpp  broadcastwnd.h  clearItemWidget.cpp  clearItemWidget.h  collectSetDlg.cpp  collectSetDlg.h  dataclearDlg.cpp  dataclearDlg.h  listItemWidget.cpp  listItemWidget.h  logprint.cpp  logprint.h  main.cpp  mainwindow.cpp  mainwindow.h  quartz.cpp  quartz.h  regexpression.cpp  regexpression.h  renameDlg.cpp  renameDlg.h  selUserDlg.cpp  selUserDlg.h  status.cpp  status.h  subdirtemplateedit.cpp  subdirtemplateedit.h  systemset.cpp  systemset.h  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  userInfoDlg.cpp  userInfoDlg.h  (+2 more)
apps/DataTransfer/res/: Icons.qrc
apps/DataTransfer/ui/: RegularExpression.ui  baseset.ui  broadcastwnd.ui  clearItemWidget.ui  collect.ui  dataclear.ui  itemWidget.ui  mainwindow.ui  renameDlg.ui  selUser.ui  subdirtemplateedit.ui  systemset.ui  userItemWidget.ui  userManage.ui
apps/DataTransferConsole/: CMakeLists.txt  main.cpp
apps/DataTransferPro/: CMakeLists.txt  main.cpp
apps/DataTransferTest/: CMakeLists.txt  main.cpp
cmake/: ECMQt4To5Porting.cmake  FindLog4cplus.cmake  FindLog4cpp.cmake  FindVLD.cmake  ctkFunctionGetPluginDependencies.cmake  ctkMacroSetupPlugins.cmake
cmake/LastConfigureStep/: CMakeLists.txt
cmake/Testing/: CMakeLists.txt
cmake/ctkLinkerAsNeededFlagCheck/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
config/: DataTransfer.logproperties  DataTransferPro.logproperties  Transfer.db  rename.rule  subdirfilter.rule
i18n/: CMakeLists.txt  FileTransfer_en.ts  FileTransfer_zh.ts  RadarMessageCentre_en.ts  RadarMessageCentre_zh.ts  RadarMosaicClient_en.ts  RadarMosaicClient_zh.ts  RadarServerV2_en.ts  RadarServerV2_zh.ts  RadarServers_en.ts  RadarServers_zh.ts
include/: macro.h
include/3dpart/: macro.h
include/QsLog/: QsLog.h  QsLogDest.h  QsLogDestFunctor.h  ctkLog.h
include/common/: pictureSetDlg.cpp  pictureSetDlg.h
include/ctkFtp/: moc_qftp.cpp  qftp.cpp  qftp.h  qftp.moc
include/ctkPluginManager/: ICtkPluginManager.h  typedefs.h
include/ctkProtocol/: ConnectConfig.h  DataCollectionPath2Type.h  IXClientCommSet.h  InvokeMethod.h  ParaConfig.h  RadarFileConfig.h  SourceDataClear.h  collectSet.h  dataclearSet.h  dbSet.h  fileMsg.h  fileTmplate.h  hwStation.h  lastCollectTime.h  lateFileTime.h  messageQueue.h  mosaicArea.h  msg.h  msgqueue.h  pathAdapter.h  pluginBaseInfo.h  prdcTransferSet.h  pupmosaicProduct.h  radarAnimationSet.h  radarProduct.h  radarQueue.h  testserial.h  transFileInfo.h  transferSet.h  trecMsg.h  typeRegs.h
include/ctkPublicFun/: DataBase.h  bzlib.h  change_name.h  commonfunction.h  commontypedef.h  ctkPublicFun.h  dllloader.h  event_macro.h  ginformation.h  language.h  logprotocol.h  objectfactory.h  pathbuilder.h  publicthread.h  pupdata.h  queuemsgoper.h  subdirfilter.h  udplogsender.h
include/ctkTransfer/: CollectorBase.h  LibCurlFtp.h  LibCurlFtpBase.h  LibCurlSFtp.h  curlftp.h  ftpCollector.h  sftpCollector.h  shareddirCollector.h
include/interface/: IBaseInterface.h  IFileTransfer.h  ILogPrint.h  ILogWidget.hpp  LogInterface.h  UIInterface.h
include/org.common.crypt/: ICrypt.h
include/org.common.quartz/: DispatchInterface.h  IDispatchTimer.h  TimerCallBackParam.h
plugins/org.common.crypt/: CMakeLists.txt  CryptActivator.cpp  CryptActivator.h  CryptInfo.cpp  CryptInfo.h  manifest_headers.cmake  target_libraries.cmake
plugins/org.common.quartz/: CMakeLists.txt  DispatchTimerActivator.cpp  DispatchTimerActivator.h  DispatchTimerImp.cpp  DispatchTimerImp.h  ServiceEventListenerActivator.cpp  ServiceEventListenerActivator_p.h  ccroncalculator.cpp  ccroncalculator.h  ccrontimer.cpp  ccrontimer.h  manifest_headers.cmake
plugins/org.radar.dataclear/: CDispatch.cpp  CDispatch.h  CMakeLists.txt  DataClear.cpp  DataClear.h  DataClearActivator.cpp  DataClearActivator.h  DataCleartemp.cpp  DataCleartemp.h  DelFiles.cpp  DelFiles.h  commonfunction.cpp  commonfunction.h  ftpclear.cpp  ftpclear.h  manifest_headers.cmake
plugins/org.radar.datacollection/: CMakeLists.txt  CltDispatch.cpp  CltDispatch.h  CollectHistory.cpp  CollectManager.cpp  CollectorBase.cpp  DistributeFile.cpp  DistributeFile.h  MyFtp.cpp  MyFtp.h  collectSetDlg.cpp  collectSetDlg.h  curlftp.cpp  curlftp.h  datacollectionActivator.cpp  datacollectionActivator.h  datacollectionImp.cpp  datacollectionImp.h  filewatcher.cpp  filewatcher.h  ftpCollector.cpp  manifest_headers.cmake  shareddirCollector.cpp  toVtbThread.cpp  toVtbThread.h
plugins/org.radar.datacollection/image/: res.qrc
plugins/org.radar.datacollection/ui/: datacollect.ui
plugins/org.radar.filedistribute/: CMakeLists.txt  DistributeTaskThread.cpp  DistributeTaskThread.h  FileCrypt.cpp  FileCrypt.h  FileDistribute.cpp  FileDistribute.h  FileDistributeActivator.cpp  FileDistributeActivator.h  FileDistributeThread.cpp  FileDistributeThread.h  addModel.cpp  addModel.h  curlftp.cpp  curlftp.h  cviewHeader.cpp  cviewHeader.h  manifest_headers.cmake  param.cpp  param.h  selUserDlg.cpp  selUserDlg.h  sendPrdcSetDlg.cpp  sendPrdcSetDlg.h  target_libraries.cmake  transferSetDlg.cpp  transferSetDlg.h  userInfo.cpp  userInfo.h  userManageDlg.cpp  userManageDlg.h
plugins/org.radar.filedistribute/old/: DistributeTaskThread.cpp  DistributeTaskThread.h  FileCrypt.cpp  FileDistributeThread.cpp  FileDistributeThread.h  curlftp.cpp  curlftp.h
plugins/org.radar.filedistribute/old/10.20/: curlftp.cpp  curlftp.h
plugins/org.radar.filedistribute/old/10.30/: DistributeTaskThread.cpp  DistributeTaskThread.h  curlftp.cpp
plugins/org.radar.filedistribute/old/新建文件夹/: DistributeTaskThread.cpp  DistributeTaskThread.h  FileDistributeThread.cpp  FileDistributeThread.h
plugins/org.radar.filedistribute/ui/: addModel.ui  addUser.ui  selUser.ui  sendProductSet.ui  transferSet.ui  userManage.ui
plugins/org.radar.filedistribute/ui/old/: addUser.ui  userManage.ui
(+476 files in other folders)
