

MACRO(ADD_TRANSLATION_FILES _sources )

    FOREACH (_current_FILE ${ARGN})
      GET_FILENAME_COMPONENT(_in ${_current_FILE} ABSOLUTE)
      GET_FILENAME_COMPONENT(_basename ${_current_FILE} NAME_WE)

      SET(_out ${CMAKE_BINARY_DIR}/bin/i18n/${_basename}.qm)

	  #MESSAGE(STATUS "_out = ${_out}")
	  # 添加自定义命令，生出输出文件
      ADD_CUSTOM_COMMAND(
         OUTPUT ${_out}
         COMMAND ${QT_LRELEASE_EXECUTABLE}
         ARGS -verbose ${_in} -qm ${_out}
         DEPENDS ${_in}
      )

      SET(${_sources} ${${_sources}} ${_out} )
   ENDFOREACH (_current_FILE)
ENDMACRO(ADD_TRANSLATION_FILES)

# make sure the output directory exists
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin/i18n)

#FILE (GLOB TS_FILES *.ts)

#MESSAGE(STATUS "translations")

#file (GLOB TRANSLATIONS_FILES *.ts)

#MESSAGE(STATUS "&&${FILES_TO_TRANSLATE}&&")

#定义无效值

SET(DEPENDS_QM_FILES)

#综合显示
LIST(LENGTH RADAR_MOSAIC_CLIENT_FILES_TO_TRANSLATE _length)
#MESSAGE(STATUS "${_length}")
IF (${_length})
	SET(RADAR_MOSAIC_TS_FILE RadarMosaicClient_en.ts RadarMosaicClient_zh.ts)
	QT4_CREATE_TRANSLATION(RADAR_MOSAIC_CLIENT_QM_FILES ${RADAR_MOSAIC_CLIENT_FILES_TO_TRANSLATE} ${RADAR_MOSAIC_TS_FILE}) 	
	ADD_TRANSLATION_FILES (RADAR_MOSAIC_CLIENT_QM_FILES ${RADAR_MOSAIC_TS_FILE})
	SET(DEPENDS_QM_FILES ${DEPENDS_QM_FILES} ${RADAR_MOSAIC_CLIENT_QM_FILES})
ENDIF()

#雷达组网拼图处理V1.0版本
LIST(LENGTH FILES_TO_TRANSLATE _length)
IF (${_length})
	SET(TRANSLATIONS_FILES RadarServers_en.ts RadarServers_zh.ts)
	QT4_CREATE_TRANSLATION(QM_FILES ${FILES_TO_TRANSLATE} ${TRANSLATIONS_FILES}) 
	ADD_TRANSLATION_FILES (QM_FILES ${TRANSLATIONS_FILES})	
	SET(DEPENDS_QM_FILES ${DEPENDS_QM_FILES} ${QM_FILES})
ENDIF()

#数据传输系统
LIST(LENGTH RADAR_DATATRANSFER_FILES_TO_TRANSLATE _length)
IF (${_length})
	# 翻译插件
	SET(RADAR_DATATRANSFER_FILES_TO_TRANSLATE ${RADAR_DATATRANSFER_FILES_TO_TRANSLATE} ${PLUGINS_FILES_TO_TRANSLATE})
	SET(RADAR_DATATRANSFER_TS_FILE FileTransfer_en.ts FileTransfer_zh.ts)
	QT4_CREATE_TRANSLATION(RADAR_DATATRANSFER_QM_FILES ${RADAR_DATATRANSFER_FILES_TO_TRANSLATE} ${RADAR_DATATRANSFER_TS_FILE}) 	
	ADD_TRANSLATION_FILES (RADAR_DATATRANSFER_QM_FILES ${RADAR_DATATRANSFER_TS_FILE})
	SET(DEPENDS_QM_FILES ${DEPENDS_QM_FILES} ${RADAR_DATATRANSFER_QM_FILES})
ENDIF()	

#雷达组网拼图处理V2.0版本
LIST(LENGTH RADAR_SERVER_V2_FILES_TO_TRANSLATE _length)
IF (${_length})
	# 翻译插件
	SET(RADAR_SERVER_V2_FILES_TO_TRANSLATE ${RADAR_SERVER_V2_FILES_TO_TRANSLATE} ${PLUGINS_FILES_TO_TRANSLATE})
	SET(RADAR_SERVER_V2_TS_FILE RadarServerV2_en.ts RadarServerV2_zh.ts)
	QT4_CREATE_TRANSLATION(RADAR_SERVER_V2_QM_FILES ${RADAR_SERVER_V2_FILES_TO_TRANSLATE} ${RADAR_SERVER_V2_TS_FILE}) 	
	ADD_TRANSLATION_FILES (RADAR_SERVER_V2_QM_FILES ${RADAR_SERVER_V2_TS_FILE})
	SET(DEPENDS_QM_FILES ${DEPENDS_QM_FILES} ${RADAR_SERVER_V2_QM_FILES})
ENDIF()

#消息服务
LIST(LENGTH RADAR_MESSAGECENTRE_FILES_TO_TRANSLATE _length)
IF (${_length})
	SET(RADAR_MESSAGECENTRE_TS_FILE RadarMessageCentre_en.ts RadarMessageCentre_zh.ts)
	QT4_CREATE_TRANSLATION(RADAR_MESSAGECENTRE_QM_FILES ${RADAR_MESSAGECENTRE_FILES_TO_TRANSLATE} ${RADAR_MESSAGECENTRE_TS_FILE}) 	
	ADD_TRANSLATION_FILES (RADAR_MESSAGECENTRE_QM_FILES ${RADAR_MESSAGECENTRE_TS_FILE})
	SET(DEPENDS_QM_FILES ${DEPENDS_QM_FILES} ${RADAR_MESSAGECENTRE_QM_FILES})
ENDIF()

# creating a custom target is needed to make the files build
# "ALL" means that it will be run by default
# 添加一个目标，它没有输出；这样它就总是会被构建
ADD_CUSTOM_TARGET (translations ALL
                   DEPENDS 
				   # ${QM_FILES} 
				   # ${RADAR_MOSAIC_CLIENT_QM_FILES} 
				   # ${RADAR_DATATRANSFER_QM_FILES}
				   # ${RADAR_SERVER_V2_QM_FILES}
				   # ${RADAR_MESSAGECENTRE_QM_FILES}
				   ${DEPENDS_QM_FILES})
				   
				   

# first compile sources, then compile translations
#ADD_DEPENDENCIES (translations qgis)

#MESSAGE(STATUS "QMFILES = ${QM_FILES}")
# INSTALL (FILES ${QM_FILES}
			# ${RADAR_MOSAIC_CLIENT_QM_FILES}
			# ${RADAR_DATATRANSFER_QM_FILES}
          # DESTINATION bin/i18n)
